# podcaster

./: .env  .env.example  .gitignore  CONTEXT_FOR_JULES.md  Dockerfile  LEARNINGS.md  LOCAL_DEVELOPMENT.md  PROJECT_SUMMARY.md  README.md  docker-compose.yml  google-creds.json  list_models.py  livekit.yaml  pyproject.toml
_legacy/src/: main.py
_legacy/src/api/: egress.py  routes.py
_legacy/src/workflows/: research_script.py
_legacy/tests/: test_api.py
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/src/: main.py
backend/src/api/: persistence.py  routes.py
backend/src/podcaster_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/src/workflows/: research_script.py
backend/tests/: test_agents.py
docs/agents/: host-engine.md  producer.md
docs/architecture/: a2a-manifests.md  failure-modes.md  hexagonal.md  interruption-handling.md  shell-and-soul.md  swarm-logic.md
docs/deployment/: gcp-cloud-run.md  local-prod-sim.md
docs/setup/: docker-guide.md  local-dev.md
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend/app/: EmotionCache.tsx  ThemeRegistry.tsx  globals.css  layout.tsx  page.tsx
frontend/app/components/: PodcastWizard.tsx
infra/: DEPLOYMENT.md
src/agents/: base.py
src/agents/producer/: agent.py
src/agents/researcher/: agent.py  tools.py
src/core/: domain.py  interfaces.py
src/infrastructure/: livekit_adapter.py  redis_store.py
src/personas/: host_sascha.json
tests/: test_foundation.py  test_phase2.py  test_universal_host.py
(+3 files in other folders)
